# uitag

./: .gitignore  CONTRIBUTING.md  README.md  detect.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: publish.yml  test.yml
docs/: performance.md  research.md  roadmap.md
docs/examples/: vscode-229-manifest.json
docs/releases/: v0.4.1.md
docs/specs/: multi-scale-ocr-rescan.md
docs/superpowers/plans/: 2026-03-11-text-block-grouping.md
examples/: custom_backend.py  use_as_library.py
somflow/: __init__.py  schema.json  vision.py
somflow/tools/: vision-detect.swift
tests/: test_annotate.py  test_backend_base.py  test_backend_equivalence.py  test_backend_selector.py  test_bench_cli.py  test_benchmark.py  test_classify.py  test_coreml_backend.py  test_encoder_bridge.py  test_filter.py  test_florence.py  test_group.py  test_manifest.py  test_manifest_schema.py  test_merge.py  test_mlx_backend.py  test_mlx_batch.py  test_pipeline_e2e.py  test_quadrants.py  test_vision_detect.py  test_vocab.py
tools/: convert_davit_coreml.py  quick_benchmark.py
uitag/: __init__.py  annotate.py  batch_cli.py  bench_cli.py  benchmark.py  classify.py  cli.py  filter.py  florence.py  group.py  manifest.py  merge.py  quadrants.py  rescan.py  run.py  schema.json  types.py  vision.py  vocab.py
uitag/assets/: bundled.py
uitag/backends/: __init__.py  base.py  coreml_backend.py  encoder_bridge.py  mlx_backend.py  selector.py
uitag/tools/: vision-detect.swift
uitag/vocabs/: leith-17.json  rico-25.json  screenvlm-55.json
